Bug 383627 - Overlapping time values with 90 days net worth forcast in home view
Summary: Overlapping time values with 90 days net worth forcast in home view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-17 12:39 UTC by Ralf Habacker
Modified: 2017-08-21 09:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Screenshot (41.52 KB, image/png)
2017-08-17 12:39 UTC, Ralf Habacker
Details
kmymoney test file (5.27 KB, application/x-kmymoney)
2017-08-17 12:40 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-08-17 12:39:56 UTC
Created attachment 107328 [details]
Screenshot

The appended screenshot shows that the x axis labels are overlapping and therefore unreadable. 

How to reproduce: 
1. compile kmymoney from 4.8 branch or download a windows snapshot mentioned at  https://bugs.kde.org/show_bug.cgi?id=380075#c4
2. start kmymoney and load the appended kmymoney file
3. scroll down to net worth forecast

What happens ?
The labels on the x axis are overlapping and not readable

What is expected ?
The labels should be readable
Comment 1 Ralf Habacker 2017-08-17 12:40:15 UTC
Created attachment 107329 [details]
kmymoney test file
Comment 2 Ralf Habacker 2017-08-21 09:31:49 UTC
Git commit 3edea1ea2f48efbb9f438b725d0c9fb81d931c20 by Ralf Habacker.
Committed on 21/08/2017 at 09:31.
Pushed by habacker into branch '4.8'.

Fix 'Overlapping time values with 90 days net worth forcast in home view'

Fixed by enabling automatic label rotation in overlapping case.

FIXED-IN:4.8.1

M  +1    -0    kmymoney/reports/kreportchartview.cpp

https://commits.kde.org/kmymoney/3edea1ea2f48efbb9f438b725d0c9fb81d931c20