Fix 'Overlapping time values with 90 days net worth forcast in home view'

Fixed by enabling automatic label rotation in overlapping case.

FIXED-IN:4.8.1
BUG:383627